--- a/libraryAPI/libraryAPI/Properties/launchSettings.json
+++ b/libraryAPI/libraryAPI/Properties/launchSettings.json
@@ -4,27 +4,17 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:56696",
-      "sslPort": 44388
+      "applicationUrl": "http://localhost:47521",
+      "sslPort": 44329
     }
   },
   "profiles": {
-    "http": {
+    "LibraryAPI": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "http://localhost:5028",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },
-    "https": {
-      "commandName": "Project",
-      "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7213;http://localhost:5028",
+      "applicationUrl": "https://localhost:7219;http://localhost:5047",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
